Fixed overflow and font issues

--- a/CSS/Animation/background float/background.css
+++ b/CSS/Animation/background float/background.css
@@ -12,7 +12,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #3b3d54;
   font-size: 14px;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .wrap {
@@ -45,151 +45,151 @@ body {
 }
 
 .svg:nth-child(1) {
-  left: 72%;
+  left: -8%;
   animation: raise1 17s linear infinite;
-  animation-delay: -3s;
-  transform: scale(-0.3) rotate(255deg);
+  animation-delay: -4s;
+  transform: scale(-0.3) rotate(319deg);
   z-index: -6;
   filter: blur(-5px);
 }
 @keyframes raise1 {
   to {
     bottom: 150vh;
-    transform: scale(-0.3) rotate(34deg);
+    transform: scale(-0.3) rotate(125deg);
   }
 }
 
 .svg:nth-child(2) {
-  left: 21%;
-  animation: raise2 16s linear infinite;
-  animation-delay: -3s;
-  transform: scale(0) rotate(21deg);
+  left: 40%;
+  animation: raise2 15s linear infinite;
+  animation-delay: -1s;
+  transform: scale(0) rotate(287deg);
   z-index: -5;
   filter: blur(-4px);
 }
 @keyframes raise2 {
   to {
     bottom: 150vh;
-    transform: scale(0) rotate(269deg);
+    transform: scale(0) rotate(147deg);
   }
 }
 
 .svg:nth-child(3) {
-  left: 59%;
-  animation: raise3 10s linear infinite;
-  animation-delay: -1s;
-  transform: scale(0.3) rotate(168deg);
+  left: 93%;
+  animation: raise3 18s linear infinite;
+  animation-delay: 0s;
+  transform: scale(0.3) rotate(360deg);
   z-index: -4;
   filter: blur(-3px);
 }
 @keyframes raise3 {
   to {
     bottom: 150vh;
-    transform: scale(0.3) rotate(115deg);
+    transform: scale(0.3) rotate(95deg);
   }
 }
 
 .svg:nth-child(4) {
-  left: 35%;
-  animation: raise4 13s linear infinite;
-  animation-delay: 0s;
-  transform: scale(0.6) rotate(230deg);
+  left: 88%;
+  animation: raise4 12s linear infinite;
+  animation-delay: -2s;
+  transform: scale(0.6) rotate(142deg);
   z-index: -3;
   filter: blur(-2px);
 }
 @keyframes raise4 {
   to {
     bottom: 150vh;
-    transform: scale(0.6) rotate(277deg);
+    transform: scale(0.6) rotate(87deg);
   }
 }
 
 .svg:nth-child(5) {
-  left: 49%;
-  animation: raise5 18s linear infinite;
+  left: 5%;
+  animation: raise5 21s linear infinite;
   animation-delay: 0s;
-  transform: scale(0.9) rotate(177deg);
+  transform: scale(0.9) rotate(193deg);
   z-index: -2;
   filter: blur(-1px);
 }
 @keyframes raise5 {
   to {
     bottom: 150vh;
-    transform: scale(0.9) rotate(244deg);
+    transform: scale(0.9) rotate(291deg);
   }
 }
 
 .svg:nth-child(6) {
-  left: 72%;
-  animation: raise6 19s linear infinite;
-  animation-delay: 0s;
-  transform: scale(1.2) rotate(127deg);
+  left: 9%;
+  animation: raise6 9s linear infinite;
+  animation-delay: -1s;
+  transform: scale(1.2) rotate(224deg);
   z-index: -1;
   filter: blur(0px);
 }
 @keyframes raise6 {
   to {
     bottom: 150vh;
-    transform: scale(1.2) rotate(72deg);
+    transform: scale(1.2) rotate(355deg);
   }
 }
 
 .svg:nth-child(7) {
-  left: 26%;
-  animation: raise7 14s linear infinite;
-  animation-delay: -3s;
-  transform: scale(1.5) rotate(21deg);
+  left: 87%;
+  animation: raise7 20s linear infinite;
+  animation-delay: -2s;
+  transform: scale(1.5) rotate(171deg);
   z-index: 0;
   filter: blur(1px);
 }
 @keyframes raise7 {
   to {
     bottom: 150vh;
-    transform: scale(1.5) rotate(152deg);
+    transform: scale(1.5) rotate(287deg);
   }
 }
 
 .svg:nth-child(8) {
-  left: 100%;
-  animation: raise8 7s linear infinite;
-  animation-delay: 0s;
-  transform: scale(1.8) rotate(216deg);
+  left: 89%;
+  animation: raise8 16s linear infinite;
+  animation-delay: -1s;
+  transform: scale(1.8) rotate(11deg);
   z-index: 1;
   filter: blur(2px);
 }
 @keyframes raise8 {
   to {
     bottom: 150vh;
-    transform: scale(1.8) rotate(39deg);
+    transform: scale(1.8) rotate(264deg);
   }
 }
 
 .svg:nth-child(9) {
-  left: 93%;
-  animation: raise9 16s linear infinite;
-  animation-delay: -2s;
-  transform: scale(2.1) rotate(154deg);
+  left: -12%;
+  animation: raise9 11s linear infinite;
+  animation-delay: 0s;
+  transform: scale(2.1) rotate(178deg);
   z-index: 2;
   filter: blur(3px);
 }
 @keyframes raise9 {
   to {
     bottom: 150vh;
-    transform: scale(2.1) rotate(286deg);
+    transform: scale(2.1) rotate(238deg);
   }
 }
 
 .svg:nth-child(10) {
-  left: 78%;
-  animation: raise10 11s linear infinite;
+  left: 55%;
+  animation: raise10 21s linear infinite;
   animation-delay: -3s;
-  transform: scale(2.4) rotate(278deg);
+  transform: scale(2.4) rotate(116deg);
   z-index: 3;
   filter: blur(4px);
 }
 @keyframes raise10 {
   to {
     bottom: 150vh;
-    transform: scale(2.4) rotate(231deg);
+    transform: scale(2.4) rotate(248deg);
   }
 }/*# sourceMappingURL=background.css.map */
