--- a/CSS/Animation/text-hover-highlight/text-hover-highlight.css
+++ b/CSS/Animation/text-hover-highlight/text-hover-highlight.css
@@ -1,10 +1,58 @@
-#island-2 a {
+* {
+  margin: 0;
+}
+
+body {
+  font-family: "Open Sans";
+  width: 100%;
+  height: 100vh;
+}
+
+.content {
+  margin-top: 6em;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 3em;
+  padding-right: 3em;
+}
+
+h1 {
+  font-family: "Merriweather";
+  text-align: center;
+  flex: none;
+  word-break: break-word;
+  font-size: 3em;
+}
+
+p {
+  line-height: 1.8;
+}
+p + p {
+  margin-top: 2em;
+}
+
+a {
   text-decoration: none;
   color: inherit;
   position: relative;
   cursor: pointer;
 }
-#island-2 a.highlight::after {
+a.grow::after {
+  content: " ";
+  position: absolute;
+  top: 100%;
+  left: 25%;
+  width: 50%;
+  height: 1px;
+  border-bottom: 1px solid tomato;
+  transition: 0.4s;
+}
+a.grow:hover::after {
+  width: 100%;
+  left: 0;
+}
+a.highlight::after {
   content: " ";
   position: absolute;
   z-index: -1;
@@ -16,10 +64,84 @@
   border-bottom: 1px solid tomato;
   transition: 0.4s;
 }
-#island-2 a.highlight:hover::after {
+a.highlight:hover::after {
   top: 0;
   height: 1.5em;
   background-color: rgba(255, 99, 71, 0.5);
   border-color: transparent;
 }
-/*# sourceMappingURL=text-hover-highlight.css.map */
+a.swipe::before {
+  content: " ";
+  position: absolute;
+  z-index: -1;
+  top: 100%;
+  left: -2px;
+  padding: 0 2px;
+  width: calc(100% + 2px);
+  height: 1px;
+  border-bottom: 1px solid tomato;
+  transition: 0.4s;
+}
+a.swipe::after {
+  content: " ";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: -2px;
+  padding: 0 2px;
+  width: 1px;
+  height: 1.5em;
+  transition: 0.4s;
+}
+a.swipe:hover::after {
+  width: 100%;
+  background-color: rgba(255, 99, 71, 0.75);
+}
+a.magic-btn::before {
+  content: " ";
+  position: absolute;
+  z-index: -1;
+  bottom: 0;
+  left: -2px;
+  padding: 0 2px;
+  width: calc(100% + 2px);
+  height: 1px;
+  border-bottom: 1px solid tomato;
+  transition: 0.4s;
+}
+a.magic-btn::after {
+  content: " ";
+  position: absolute;
+  z-index: -1;
+  bottom: 0;
+  left: calc(50% - 4px);
+  padding: 0 2px;
+  width: 0;
+  height: 0;
+  border: 1px solid transparent;
+  transition: 0.4s;
+}
+a.magic-btn:hover::before {
+  border-color: transparent;
+}
+a.magic-btn:hover::after {
+  width: 100%;
+  height: 1.25em;
+  left: -1em;
+  bottom: -0.35em;
+  padding: 0.5em 1em;
+  border-color: tomato;
+  background-color: tomato;
+  border-radius: 2.5em;
+}
+a.magic-btn {
+  display: inline-block;
+  transition: 0.3s;
+  transition-delay: 0s;
+  transform: scale(1);
+}
+a.magic-btn:hover {
+  color: #fff;
+  transform: scale(1.4);
+  transition-delay: 0.11s;
+}/*# sourceMappingURL=text-hover-highlight.css.map */
